# multi-agent-ops-demo

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py
app/agents/: __init__.py  base.py  critic.py  planner.py  prompts.py  researcher.py  writer.py
app/api/: __init__.py  main.py  routes.py  schemas.py
app/common/: __init__.py  config.py  guardrails.py  logger.py
app/observability/: __init__.py  run_manager.py  tracer.py
app/orchestrator/: __init__.py  approval.py  coordinator.py  graph.py  state.py
app/rag/: __init__.py  embeddings.py  retriever.py  vector_store.py
app/tools/: __init__.py  critique.py  registry.py  retrieve.py  summarize.py  write_draft.py
app/ui/: __init__.py  components.py  streamlit_app.py
data/documents/: case_studies.md  faq.md  pricing.md  product_overview.md
runs/: .gitkeep
tests/: conftest.py  test_approval_gate.py  test_failure_scenario.py  test_tool_allowlist.py  test_trace_saving.py
